# Fresh

./: .agent-instructions.md  .env.example  .env.firebase  .env.firebase.template  .env.template  .gitignore  .pre-commit-config.yaml  .temp_client_email  .temp_private_key  .warp  AAWOS_STATUS_REPORT.md  APP_GENESIS_MISSION_COMPLETE.md  AUTONOMOUS_BATCH_EXECUTION_REPORT.md  AUTONOMOUS_BATCH_IMPLEMENTATION_GUIDE.md  AUTONOMOUS_DEVELOPMENT_SUCCESS_REPORT.md  AUTONOMOUS_DEV_FINAL_STATUS.md  AUTONOMOUS_PROGRESS.md  AUTONOMOUS_SYSTEM_DEMO_REPORT.md  ENHANCED_MEMORY_SUMMARY.md  HOW_TO_START_AUTONOMOUS_DEV.md  PHASE2_COMPLETION_REPORT.md  QUICKSTART.md  README.md  SYSTEM_INTEGRITY_REPORT.md  VERSION  WARP.md  WARP.md.bak  agency_manifesto.md  app_genesis_state.json  autonomous_dev_starter.py  autonomous_dev_strategy.py  autonomous_development_guide.py  autonomous_launcher.py  autonomous_todo_api.py  conftest.py  demo_autonomous.py  demo_autonomous_workflow.py  demo_improve_me.py  demo_orchestration_examples.py  docker-compose.yml  (+30 more)
.documentation/: manifest.json
.fresh/: assist.yaml  dev_loop_state.json  orchestration_report_20250905_004245.json  orchestration_report_20250905_004809.json
agent_configs/: default.yaml
ai/: README.md  README.md.backup  __init__.py  __init__.py.backup  agency.py  agency_manifesto.md  agency_openai_patch.py  enhanced_agency.py
autonomous_todo_api/: README.md  continue_autonomous_dev.py  database.py  main.py  models.py  requirements.txt  test_main.py
docs/: ADR-012-enhanced-agent-orchestration.md  ADR-013-test-infrastructure-offline-mode.md  ADR-BROKEN-WINDOWS-REPAIR.md  ADR_INDEX.md  ASSIST.md  (+55 more)
(+1562 files in other folders)
