[tool.poetry]
name = "fresh"
version = "0.1.0"
description = "Agent-ready repo with TDD + ADR discipline using Agency Swarm"
authors = ["Fresh Repo Setup <setup@local.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
agency-swarm = "^0.7.2"
requests = "^2.32.3"
google-cloud-firestore = "^2.16.0"
rich = "^13.7.0"
psutil = "^5.9.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-timeout = "^2.3.1"

[tool.pytest.ini_options]
addopts = "-q --timeout=5"
timeout = 5

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

