[tool.poetry]
name = "fresh"
version = "0.1.0"
description = "Agent-ready repo with TDD + ADR discipline using Agency Swarm"
authors = ["Fresh Repo Setup <setup@local.dev>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
agency-swarm = "^0.7.2"
requests = "^2.32.3"
google-cloud-firestore = "^2.16.0"
rich = "^13.7.0"
psutil = "^5.9.0"
pyyaml = "^6.0.2"
# FastAPI and related dependencies
fastapi = "^0.110.0"
uvicorn = {extras = ["standard"], version = "^0.24.0"}
sqlalchemy = "^2.0.23"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-timeout = "^2.3.1"
pytest-asyncio = "^0.21.1"
httpx = "^0.27.0"

[tool.pytest.ini_options]
addopts = "-q --timeout=5"
timeout = 5
asyncio_mode = "auto"
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
]

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"

